Wireframes not showing up in edit mode when Faces shade is disabled. #62189

Closed
opened 2019-03-04 20:32:00 +01:00 by Zino Guerr · 7 comments

System Information
Windows 10 64 bits
GTX 1050 TI latest Driver
Blender Version
Broken:
v2.80.46 beta hash 8df5e0eb66
Worked:
v2.80.32 Alpha 2
Short description of error
wireframes don't show up all when 'faces shade' is off in edit mode, used to be working like in the pic.

Exact steps for others to reproduce the error
overlays-> disable "Faces shade" in Mesh edit mode.
switch to wireframes in edit mode.
Attachment
Wire.png

**System Information** Windows 10 64 bits GTX 1050 TI latest Driver **Blender Version** Broken: v2.80.46 beta hash 8df5e0eb66f7 Worked: v2.80.32 Alpha 2 **Short description of error** wireframes don't show up all when 'faces shade' is off in edit mode, used to be working like in the pic. **Exact steps for others to reproduce the error** overlays-> disable "Faces shade" in Mesh edit mode. switch to wireframes in edit mode. **Attachment** ![Wire.png](https://archive.blender.org/developer/F6761367/Wire.png)
Author

Added subscriber: @Znio.G

Added subscriber: @Znio.G
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Clément Foucault was assigned by Jacques Lucke 2019-03-05 11:14:36 +01:00
Member

faces shade.gif

![faces shade.gif](https://archive.blender.org/developer/F6765305/faces_shade.gif)
Clément Foucault removed their assignment 2019-03-26 00:34:36 +01:00
Jeroen Bakker was assigned by Clément Foucault 2019-03-26 00:34:36 +01:00

Added subscriber: @fclem

Added subscriber: @fclem

This issue was referenced by 52aa35ec1e

This issue was referenced by 52aa35ec1e8a35032594e88f7053929f9bd8f1bc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

this bug still apparent when switching rendering modes like EEVEE or Cycles, should i open a new ticket since this one is marked resolved? thanks.

this bug still apparent when switching rendering modes like EEVEE or Cycles, should i open a new ticket since this one is marked resolved? thanks.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62189
No description provided.