Fix T62189: Wires Occluded When Edit Mesh Faces Disabled

Reviewed By: fclem
Maniphest Tasks: T62189
Differential Revision: https://developer.blender.org/D4593